fixed z-index issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -306,7 +306,7 @@ li {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: -2;
   object-fit: cover;
 }
 
@@ -393,6 +393,7 @@ li {
 
 .video-container {
   width: calc(100vw/2);
+  /* filter: grayscale(100%); */
 }
 @media(max-width:1023px) {
 .video-container {
@@ -418,7 +419,7 @@ li {
 .play-btn {
   position: absolute;
   top: 0;
-  z-index: 1;
+  z-index: 0;
   display: flex
 }
 
@@ -438,7 +439,7 @@ li {
   padding-left: 1.5rem;
   width: 100%;
   height: 700px;
-  z-index: 0;
+  z-index: -1;
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
